--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="glitch" data-text="GLITCH">GLITCH</div>
     <script src="app.js"></script>
   </body>
 </html>
